# note-rows

./: CMakeLists.txt  README.md  update_extern.sh
include/note_rows/: basic_concepts.hh  note_rows.hh
src/: CMakeLists.txt  basic_concepts.cc  main.cc  note_rows.cc
test/: CMakeLists.txt  test_basic_concepts.cc  test_note_rows.cc
